# sdl2_2d_beginner

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2_image.cmake
src/: sdl01_init.c  sdl02_win.c  sdl03_image.c  sdl04_animation.c  sdl05_events.c  sdl06_kbdin.c  sdl07_mouse.c
